Style based on completeness finished. Responsiveness done. List item text overflow corrected.

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   justify-content: center;
+  background-color: #000;
 }
 
 code {
